# Explainable-AI

./: .gitignore  Dockerfile  Makefile  README.md  architecture.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: dev.yaml  prod.yaml
src/explainable_aml/: config.py  test_system.py
src/explainable_aml/dashboard/: app.py
src/explainable_aml/data/: generate_data.py  transactions.csv
src/explainable_aml/explainability/: explain.py
src/explainable_aml/model/: train_model.py
src/explainable_aml/nlp/: generate_explanation.py
src/explainable_aml/utils/: logging.py  validation.py
tests/: conftest.py  test_explain.py  test_model.py  test_nlp.py  test_system.py  test_utils.py
